--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,37 @@
-plugins {
-    id 'java'
+apply plugin: 'java'
+
+//project.ext {
+//    cucumberVersion = '4.0.0'
+//}
+
+dependencies {
+//    testCompile 'io.cucumber:cucumber-java:' + cucumberVersion
+//    testCompile 'io.cucumber:cucumber-junit:' + cucumberVersion
+//    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
+//    testCompile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: '3.141.59'
+//    compile group: 'com.vimalselvam', name: 'cucumber-extentsreport', version: '3.0.2'
+//    compile group: 'com.relevantcodes', name: 'extentreports', version: '2.41.2'
+
+    compile "org.seleniumhq.selenium:selenium-java:3.4.0"
+    testCompile "junit:junit:3.8.1"
+    testCompile "info.cukes:cucumber-java:1.2.5"
+    compile "info.cukes:cucumber-jvm:1.2.5"
+    testCompile "info.cukes:cucumber-junit:1.2.5"
+    compile "info.cukes:cucumber-core:1.2.5"
+    compile "info.cukes:cucumber-html:0.2.3"
+    compile "info.cukes:cucumber-java:1.2.5"
+    compile "info.cukes:cucumber-jvm-deps:1.0.5"
+    compile "info.cukes:gherkin:2.12.2"
+    compile "org.hamcrest:hamcrest-all:1.3"
+    compile "info.cukes:cucumber-picocontainer:1.2.5"
+    compile "info.cukes:cucumber-testng:1.2.5"
+    compile "com.aventstack:extentreports:3.0.5"
+    compile "org.freemarker:freemarker:2.3.26-incubating"
+    compile "net.masterthought:cucumber-reporting:3.6.0"
+    compile "com.vimalselvam:cucumber-extentsreport:2.0.4"
+    testCompile "junit:junit:4.12"
 }
-
-group 'pl.cucumberFramework'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
